<resources>
    <string name="app_name">Public Apps Hub </string>
    <string name="new_design">New Design </string>
    <string name="design_name">Design Name </string>
    <string name="design">Design </string>
    <string name="name">Name </string>
    <string name="text_desc">Text Description </string>
    <string name="vis_desc">Visual Description </string>
    <string name="category">Category </string>
    <string name="categories">Categories </string>
    <string name="edu_cat">Education services/apps </string>
    <string name="hea_cat">Health services/apps </string>
    <string name="tra_cat">Transportation services/apps </string>
    <string name="use_des_edit">· Use Design Editor </string>
    <string name="open_new_win">Open in New Window </string>
    <string name="screens">Screens </string>
    <string name="uplo_screshot">· Upload ScreenShot </string>
    <string name="sel_file">Seleccionar archivo </string>
    <string name="submit">Submit </string>
    <string name="new_code">New Code </string>
    <string name="code_name">Code Name </string>
    <string name="aso_ser">Associated Service </string>
    <string name="author">Author </string>
    <string name="code_loc">Code Location </string>
    <string name="platform">Platform </string>
    <string name="html5">HTML5 </string>
    <string name="android">Android </string>
    <string name="ios">IOS </string>
    <string name="code_imp">Code Implementations: </string>
    <string name="access_screen">Access Screen </string>
    <string name="screen1">Step 1 Screen </string>
    <string name="screen2">Step 2 Screen </string>
    <string name="new_deploy">New Deployment </string>
    <string name="dep_name">Deployment Name </string>
    <string name="aso_code">Associated Code </string>
    <string name="dep_url">Deployment URL </string>
    <string name="user_geo_area">Users Geographic Area </string>
    <string name="country">Country </string>
    <string name="sp">España </string>
    <string name="fr">Francia </string>
    <string name="por">Portugal </string>
    <string name="uk">ReinoUnido </string>
    <string name="region">Region </string>
    <string name="ser_mana">Service Management </string>
    <string name="view_details">View details </string>
    <string name="code">Code </string>
    <string name="ser_dep">Service Deployments </string>
    <string name="dep">Deployment </string>
    <string name="geo_area">Geographic Area </string>
    <string name="new_author">New Author</string>
    <string name="author_name">Author Name</string>
    <string name="location">Location</string>
    <string name="organization">Organization</string>
    <string name="webpage">Web Page</string>
    <string name="foto">Foto</string>
</resources>
