<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_design"
            android:id="@+id/textView1"
            android:textSize="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/design_name"
            android:layout_below="@id/textView1"
            android:id="@+id/textView2"
            android:layout_alignLeft="@id/textView1"
            android:layout_marginLeft="7dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_below="@id/textView2"
            android:layout_alignLeft="@id/textView2"
            android:id="@+id/edittext1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:layout_below="@id/edittext1"
            android:id="@+id/textView3"
            android:layout_alignLeft="@id/textView2"/>

        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView3"
            android:layout_alignLeft="@id/textView3"
            android:id="@+id/radioGroup">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/radio1"
                android:layout_below="@id/textView3"
                android:text="@string/edu_cat"
                android:checked="true"/>

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/radio2"
                android:layout_below="@id/textView3"
                android:text="@string/hea_cat" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/radio3"
                android:layout_below="@id/textView3"
                android:text="@string/tra_cat" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_desc"
            android:layout_below="@id/radioGroup"
            android:id="@+id/textView4"
            android:layout_alignLeft="@id/radioGroup"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@id/textView4"
            android:layout_alignLeft="@+id/textView4"
            android:id="@+id/edittext2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edittext2"
            android:text="@string/vis_desc"
            android:layout_alignLeft="@id/edittext2"
            android:id="@+id/textView5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/screens"
            android:textSize="32dp"
            android:layout_below="@id/textView5"
            android:id="@+id/textView6"
            android:layout_alignLeft="@id/textView5"
            android:layout_marginLeft="35dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uplo_screshot"
            android:layout_below="@id/textView6"
            android:layout_alignLeft="@id/textView6"
            android:id="@+id/textView8"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView8"
            android:text="@string/sel_file"
            android:textSize="10dp"
            android:layout_alignLeft="@id/textView6"
            android:id="@+id/button3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button3"
            android:layout_alignLeft="@id/textView6"
            android:id="@+id/textView9"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/submit"
            android:layout_alignLeft="@id/textView5"
            android:layout_below="@id/textView9"
            android:id="@+id/submit"
            android:onClick="addApp"/>

    </RelativeLayout>
</ScrollView>