<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/swipe_container">
    <ScrollView
        android:layout_width="match_parent" android:layout_height="match_parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/codeCodeView"
                    android:text="@string/code"
                    android:textSize="24dp"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="20dp"
                    android:id="@+id/codeNameView"
                    android:text="@string/code_name"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/codeName"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="20dp"
                    android:id="@+id/aso_serView"
                    android:text="@string/aso_ser"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/aso_ser"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="20dp"
                    android:id="@+id/authorView"
                    android:text="@string/author"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/author"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="20dp"
                    android:id="@+id/platformView"
                    android:text="@string/platform"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/platform"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="20dp"
                    android:id="@+id/codelocView"
                    android:text="@string/code_loc"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/codeloc"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="20dp"
                    android:id="@+id/ser_dep"
                    android:text="@string/ser_dep"/>
            </TableRow>

            <TableRow>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/adddeploy"
                    android:text="@string/new_deploy"/>
            </TableRow>

            <TableRow>
                <ListView
                    android:id="@android:id/list"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:drawSelectorOnTop="false">
                </ListView>
            </TableRow>

            <TableRow>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/addauthor"
                    android:text="@string/new_author"/>
            </TableRow>

            <TableRow>
                <ListView
                    android:id="@+id/list2"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:drawSelectorOnTop="false">

                </ListView>
            </TableRow>
        </GridLayout>
    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>